Fix cramped space in modal

--- a/src/assets/styles/components/modal.scss
+++ b/src/assets/styles/components/modal.scss
@@ -85,4 +85,22 @@
   @media (min-width: 80ch) {
     background-color: hsl(var(--bg-secondary) /50%);
   }
+
+  &-section {
+    align-items    : center;
+    display        : flex;
+    flex           : 1;
+    flex-wrap      : wrap;
+    gap            : 1ch;
+    justify-content: center;
+    min-width      : 15ch;
+
+    &:first-child {
+      justify-content: start;
+    }
+
+    &:last-child {
+      justify-content: end;
+    }
+  }
 }
